# cv2-stubs

./: .gitignore  README.md  pyproject.toml
cv2-stubs/: __init__.pyi
